crates/plotnik-tests/tests/04-emit/types/alternations/error_conflicting_capture_types_across_alternatives.txt
Q = [
  (identifier) @x
  (number)* @x
]
------------------ DIAGNOSTICS -------------------
error: `@x` has incompatible types `Node` and `Node[]` across alternatives
 --> query.ptk:2:16
  |
2 |   (identifier) @x
  |                ^^
3 |   (number)* @x
  |             -- `@x` has type `Node[]` here
  |
help: make every alternative produce the same type, or label the alternatives for a variant type
